--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev:inspect": "npm --node-options=--inspect=127.0.0.1:9229 run dev",
     "dev": "next",
     "build": "next build",
     "start": "next start",
