--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "isomorphic-unfetch": "^4.0.2",
     "next": "^13.1.6",
     "react": "^18.2.0",
