--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.13",
+    
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "isomorphic-unfetch": "^4.0.2",
@@ -25,6 +25,8 @@
     "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "husky": "^8.0.3",
